- Updated the smart script for Horgrenn Hellcleave to give every member of a group credit for the quest The Conquest Pit: Death Is Likely.
- Updated the smart script for Conqueror Krenna to give every member of a group credit for the quest The Conquest Pit: Final Showdown.

[2023-02-21]
- Updated the smart script for Chicken Escapee to give every member of a group the quest item.
- Added Skyreach Crystal Cluster to the loot table of Sapphire Hive Drone for the quest Mischief in the Making.
- Added Skyreach Crystal Cluster to the loot table of Sapphire Hive Wasp for the quest Mischief in the Making.
- Updated the flags of Skyreach Crystal Cluster to allow every member of a group to loot it.

[2023-03-01]
- Updated the respawn time of Small Proto-Drake Egg.

[2023-03-02]
- Updated the smart script for Dead Iron Giant to give every member of a group the quest item.
- Added Horn Fragment to the loot table of Restless Frostborn Warrior for the quest In Memoriam.
- Added Horn Fragment to the loot table of Restless Frostborn Ghost for the quest In Memoriam.
- Updated the flags of Horn Fragment to allow every member of a group to loot it.
- Added Cave Mushroom to the loot table of Infesting Jormungar for the quest Cave Medicine.
- Added Cave Mushroom to the loot table of Cavedweller Worg for the quest Cave Medicine.
- Updated the flags of Cave Mushroom to allow every member of a group to loot it.
- Updated the flags of Inventor's Disk Fragment to allow every member of a group to loot it.

[2023-05-18]
- Updated the respawn time of Umpi.

[2023-05-19]
- Updated the respawn time of Stanley.

[2023-05-25]
- Added Bleeding Hollow Supply Crate to the loot table of Boulderfist Warrior for the quest Bleeding Hollow Supply Crates.
- Added Bleeding Hollow Supply Crate to the loot table of Boulderfist Mage for the quest Bleeding Hollow Supply Crates.
- Added the script for the spell Plant Kil'sorrow Banner to make the quest Returning the Favor give credit to every member of a group.